// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tree-shake test A 1`] = `
{
  "errors": [],
  "nbOutputFiles": 1,
  "output": "// dist/index.js
function getRandomNumber(min = 0, max = 100) {
  return Math.floor(Math.random() * (max - min + 1) + min);
}

// <stdin>
console.log(\\"tree-shaking test A, only using getRandomNumber\\", getRandomNumber(1, 10));
",
  "warnings": [],
}
`;

exports[`tree-shake test B 1`] = `
{
  "errors": [],
  "nbOutputFiles": 1,
  "output": "// dist/index.js
function pickOne(items) {
  return items[Math.floor(Math.random() * items.length)];
}
function getRandomString() {
  const strings = \\"Bar Alto,Sin Seguritat,Lorem Ipsum,Ciao,Sit dolor,Por erestet,Tchu la Comida,Amet Inn,Aqualeris baked,Bouquet,Zu Amarillo,Ploject,Ruhe animals,Mah Plizure,Baacon pasty,Vinci mador,Alan Awake,Malohe Sutur,A priore sur,Quel memento,Kalitat arae\\".split(\\",\\");
  return String(pickOne(strings));
}
function getRandomNumber(min = 0, max = 100) {
  return Math.floor(Math.random() * (max - min + 1) + min);
}

// <stdin>
console.log(\\"tree-shaking test B, using getRandomNumber and getRandomString\\", getRandomNumber(1, 10), getRandomString(10));
",
  "warnings": [],
}
`;

exports[`tree-shake test C 1`] = `
{
  "errors": [],
  "nbOutputFiles": 1,
  "output": "// dist/index.js
var nbMsInSecond = 1e3;
var nbMsInMinute = 6e4;
var nbMsInHour = 36e5;
var nbMsInDay = 864e5;
var nbMsInWeek = 6048e5;
var nbMsInMonth = 2592e6;
var nbMsInYear = 31536e6;
function readableTimeAgo(input, language = \\"en\\") {
  const rtf = new Intl.RelativeTimeFormat(language, { numeric: \\"auto\\" });
  const ms = typeof input === \\"number\\" ? input : Date.now() - input.getTime();
  if (ms < nbMsInMinute)
    return rtf.format(-Math.floor(ms / nbMsInSecond), \\"second\\");
  if (ms < nbMsInHour)
    return rtf.format(-Math.floor(ms / nbMsInMinute), \\"minute\\");
  if (ms < nbMsInDay)
    return rtf.format(-Math.floor(ms / nbMsInHour), \\"hour\\");
  if (ms < nbMsInWeek)
    return rtf.format(-Math.floor(ms / nbMsInDay), \\"day\\");
  if (ms < nbMsInMonth)
    return rtf.format(-Math.floor(ms / nbMsInWeek), \\"week\\");
  if (ms < nbMsInYear)
    return rtf.format(-Math.floor(ms / nbMsInMonth), \\"month\\");
  return rtf.format(-Math.floor(ms / nbMsInYear), \\"year\\");
}

// <stdin>
console.log(\\"tree-shaking test C, only using readableTimeAgo\\", readableTimeAgo());
",
  "warnings": [],
}
`;
